# HomeWorks

С++/1. Основы программирования/01. Переменные и их типы/1. Повторите число/: source.cpp
С++/1. Основы программирования/01. Переменные и их типы/2. Повторите слово/: source.cpp
С++/1. Основы программирования/02. Операторы ветвления. Логические операции/1. Таблица истинности/: source.cpp
С++/1. Основы программирования/02. Операторы ветвления. Логические операции/2. Упорядочить числа/: source.cpp
С++/1. Основы программирования/02. Операторы ветвления. Логические операции/3. Гороскоп/: source.cpp
С++/1. Основы программирования/02. Операторы ветвления. Логические операции/4. Сравнить числа/: source.cpp
С++/1. Основы программирования/03. Циклические конструкции/1. Сумматор/: source.cpp
С++/1. Основы программирования/03. Циклические конструкции/2. Сумма цифр числа/: source.cpp
С++/1. Основы программирования/03. Циклические конструкции/3. Таблица умножения для числа/: source.cpp
С++/1. Основы программирования/04. Массивы/1. Вывод массива на экран/: source.cpp
С++/1. Основы программирования/04. Массивы/2. Максимум и минимум/: source.cpp
С++/1. Основы программирования/04. Массивы/3. Двумерный массив/: source.cpp
С++/1. Основы программирования/Итоговая работа. Игра «Жизнь»/: source.cpp
С++/2. Базовое программирование/09. CMake/2. Проект посложнее/: CMakeLists.txt  equilateral_triangle.h  isosceles_triangle.cpp  isosceles_triangle.h  quadrangle.cpp  rectangle.cpp  right_triangle.cpp  source.cpp  triangle.cpp  triangle.h
(+72 files in other folders)
